--- a/po/eu.po
+++ b/po/eu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Aegisub 3.0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-07-05 15:11-0400\n"
+"POT-Creation-Date: 2020-07-17 16:04+0200\n"
 "PO-Revision-Date: 2014-07-15 14:58+0100\n"
 "Last-Translator: Xabier Aramendi <azpidatziak@gmail.com>\n"
 "Language-Team: (EUS_Xabier Aramendi) <azpidatziak@gmail.com>\n"
@@ -2770,19 +2770,19 @@ msgid "%i"
 msgstr ""
 
 #: ../src/dialog_align.cpp:108
-msgid "The key color to be followed."
+msgid "The key color to be followed"
 msgstr ""
 
 #: ../src/dialog_align.cpp:110
-msgid "The x coord of the key point."
+msgid "The x coord of the key point"
 msgstr ""
 
 #: ../src/dialog_align.cpp:112
-msgid "The y coord of the key point."
+msgid "The y coord of the key point"
 msgstr ""
 
 #: ../src/dialog_align.cpp:114
-msgid "Max tolerance of the color."
+msgid "Max tolerance of the color"
 msgstr ""
 
 #: ../src/dialog_align.cpp:121
